# caoqingwa_MiniWeb

./: .gitignore  README.md  caoqingwa_MiniWeb.sln
caoqingwa_MiniWeb/: CMakeLists.txt  CMakeSettings.json  caoqingwa_MiniWeb.vcxproj  caoqingwa_MiniWeb.vcxproj.filters  main.cpp  threadpool.cpp
caoqingwa_MiniWeb/caoqingw.8b4cf509/Debug/: caoqingwa_MiniWeb.exe.recipe  caoqingwa_MiniWeb.ilk  vc143.idb
caoqingwa_MiniWeb/caoqingw.8b4cf509/Debug/caoqingw.8b4cf509.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  caoqingwa_MiniWeb.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
caoqingwa_MiniWeb/caoqingw.8b4cf509/x64/Debug/: caoqingwa_MiniWeb.exe.recipe  caoqingwa_MiniWeb.ilk  vc143.idb
caoqingwa_MiniWeb/caoqingw.8b4cf509/x64/Debug/caoqingw.8b4cf509.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.read.1.tlog  (+4 more)
caoqingwa_MiniWeb/http/: tetris.css  tetris.html  tetris.js
caoqingwa_MiniWeb/include/: buffer.h  event_loop.h  http_conn.h  threadpool.h
caoqingwa_MiniWeb/platform/linux/: epoll_loop.cpp
caoqingwa_MiniWeb/platform/win/: select_loop.cpp
caoqingwa_MiniWeb/src/: buffer.cpp  http_conn.cpp  main.cpp  tetris.css  tetris.html  tetris.js
caoqingwa_MiniWeb/x64/Debug/: caoqingwa_MiniWeb.exe.recipe  caoqingwa_MiniWeb.ilk  vc143.idb
caoqingwa_MiniWeb/x64/Debug/caoqingw.8b4cf509.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  caoqingwa_MiniWeb.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
